# ArchivistPro

./: .env  .env.example  .env.viewer  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  issue-bot.yml  mirror-release.yml  release.yml
docs/: DEVELOPER_GUIDE.md  E2E_MANUAL_TEST_CHECKLIST.md  GUVENLIK.md  INSTALL.md  INSTALL_AR.md  INSTALL_BEGINNER_AR.md  INSTALL_BEGINNER_EN.md  INSTALL_BEGINNER_JA.md  INSTALL_BEGINNER_ZH.md  INSTALL_EN.md  INSTALL_JA.md  INSTALL_PRO_AR.md  INSTALL_PRO_EN.md  INSTALL_PRO_JA.md  INSTALL_PRO_ZH.md  INSTALL_ZH.md  KULLANICI_KURULUM_ACEMI.md  KULLANICI_KURULUM_PRO.md  KULLANICI_KURULUM_REHBERI.md  KULLANICI_KURULUM_REHBERI_AR.md  KULLANICI_KURULUM_REHBERI_EN.md  KULLANICI_KURULUM_REHBERI_JA.md  KULLANICI_KURULUM_REHBERI_ZH.md  RELEASE_CHECKLIST.md  SCREENSHOT_LIST.md  SESSION-2026-05-16.md  SESSION-2026-05-17.md  TODO.md  VERI_GUVENLIGI.md  i18n-glossary.md
docs/archive/: 2 Mayıs 2026 · Versiyon 2.4.1.md  2026-04-24-sol-panel-gorsel-arama-fix.md  2026-05-15_REALISTIC_AUDIT.md  AUDIT_REPORT_2026-04-11.md  DEEP_REVIEW_2026-04-13.md  DUPLICATE_FINDER_FIX_REPORT_2.md  FUNCTIONAL_TEST_PLAN.md  IYILESTIRME_PLANI_v2.3.0.md  MARKET_COMPARISON_2026-05-02.md  MULTI_PERSPECTIVE_REVIEW_2026-04-10.md  PARALLEL_SCAN_PLAN.md  PLAN_coklu_arsiv.md  SEARCH_AUDIT_2026-05-02.md  SEARCH_SYSTEM_REFERENCE.md  SECURITY_HARDENING_2026-04-11.md  SHAPE_SEARCH_SNAPSHOT_INCELEMESI_2026-05-01.md  SHAPE_SEARCH_VIDEO_INCELEMESI_2026-05-01.md  UI_UX_COMPARISON_2026-05-02.md  USAGE_SCENARIOS_REPORT.md  WEB_SERVER_PLAN.md
docs/v3/: DE-RISK-STRATEGIES.md  GATE1-ANONYMIZATION.md  PHASE3-CUTOVER-PLAN.md  SPRINT1-DESIGN-LOCK.md  SPRINT1-PREP-KIT.md  STATUS.md  baseline-heap.md
e2e/: asset-detail.spec.ts  helpers.ts  login.spec.ts  scan-modal.spec.ts  search-filter.spec.ts  settings.spec.ts
public/docs/: CHANGELOG.md  TECHNICAL_REFERENCE.md
scripts/: add-i18n-keys.cjs  anonymize-db.py  build-offline-msi.ps1  check-i18n.cjs  download-models.cjs  download-models.sh  prepare-offline-assets.ps1  sync-docs.cjs  update-docs.sh
src/: App.tsx  appVersion.ts  data.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/: oku.txt
src-tauri/src/: archive_share.rs  crash_report.rs  dwg_parse.rs  dxf_parse.rs  folder_watcher.rs  fp32_models.rs  ifc_metadata.rs  image_analysis.rs  lan_server.rs  lib.rs  max_version.rs  oda_converter.rs  office_utils.rs  ollama_db.rs  os_events.rs  pdf_metadata.rs  process_priority.rs  refile_fs.rs  rvt_metadata.rs  scan_db.rs  shape_match.rs  shapes_db.rs  shutdown_marker.rs  skp_version.rs  text_extract.rs  text_metadata.rs  thumb_util.rs  thumbnails.rs  trash.rs  vector_index.rs  video_metadata.rs
src-tauri/src/vec_db/: fixtures.rs  mod.rs  safety.rs  tests.rs
src/components/: AISettingsModal.tsx  AISetupWizard.tsx  AIStatusBadge.tsx  AdminActivityPanel.tsx  ArchiveExtractModal.tsx  ArchiveHealthBadge.tsx  ArchiveHealthModal.tsx  ArchiveImportModal.tsx  ArchiveMergeModal.tsx  AssetCard.tsx  AssetContextMenu.tsx  AssetPickerModal.tsx  AssetRelationsPanel.tsx  AssetTagsPanel.tsx  AutoRagIndexBanner.tsx  BatchTagModal.tsx  BatchToolbar.tsx  BlankContextMenu.tsx  ChatPanel.tsx  ConfirmDialog.tsx  CrashLogViewer.tsx  DashboardView.tsx  DbSavingIndicator.tsx  DetailPanel.tsx  DropZone.tsx  DuplicateFinderModal.tsx  DwgSimilarityModal.tsx  EmptyStateIllustration.tsx  ErrorBoundary.tsx  ExplorerView.tsx  FeedbackModal.tsx  FilterPresetSelector.tsx  FirstRunSetup.tsx  FoldersView.tsx  ForgotPassword.tsx  HelpPanel.tsx  InputDialog.tsx  LanSharingPanel.tsx  LockScreen.tsx  LogViewerModal.tsx  (+32 more)
src/config/: constants.ts
src/hooks/: useAppInitialization.ts  useAssetContextMenu.ts  useAssetDeletion.ts  useAutoRagIndexEnabled.ts  useBackupScheduler.ts  useChatStream.ts  useDatabaseAssets.ts  useDbSaving.ts  useDevFeedbackReceiver.ts  useEmbeddingSearch.ts  useExitConfirmation.ts  useFocusTrap.ts  useFolderWatchSettings.ts  useFolderWatcher.ts  useHybridFilteredAssets.ts  useImageSearch.ts  useOllamaHostAutoDetect.ts  useOllamaStatus.ts  usePerformanceSetup.ts  useScanWorkflow.ts  useSessionTimeout.ts  useStalenessMonitor.ts  useStorageWarning.ts  (+2 more)
(+239 files in other folders)
