[package]
name = "app"
version = "3.0.0"
description = "ArchivistPro — Mimari Dosya Arşiv & Akıllı Arama"
authors = ["ArchivistPro"]
license = "MIT"
repository = "https://github.com/ahmet3ddd/Arsiv-H2"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["admin"]
admin = []
viewer = []

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dev-dependencies]
# İzole, RAII ile otomatik temizlenen geçici dizinler (v3 test temeli — Sprint 0).
# Eski testler std::env::temp_dir() + elle remove_dir_all kullanıyordu; panic'te
# sızıntı + paralel test çakışması riski vardı. tempdir() bunu ortadan kaldırır.
tempfile = "3"

# ─────────────────────────────────────────────────────────────────────────
# MSI build profile override (Seçenek A — 2026-05-23)
# ─────────────────────────────────────────────────────────────────────────
# Sorun: Default release profile (opt-level=3) için `app` crate çok büyük
# (28 modül + 146 Tauri komutu + V3 ek kodu). 2026-05-20'de 7 build denemesi
# fail:
#   - opt-level=3/2 → STATUS_STACK_BUFFER_OVERRUN (LLVM optimizer crash)
#   - opt-level=1 → rustc-LLVM ERROR: out of memory
#   - opt-level=0 (globalde) → rlib 6.23 GB → corrupt metadata (rustc i32 4 GB offset sınırı)
#
# Strateji: Dış crate'leri orta seviye optimize et (opt-level=2 — küçük binary),
# yalnız `app` crate'i opt-level=0 + codegen-units=256 ile parçala. Umut: app
# crate'in kendisi optimize edilmediği için LLVM crash olmaz; codegen-units=256
# ile derleme paralel ve daha az bellek kullanır. rlib metadata boyutu yine
# büyük olabilir — başarısızsa Seçenek B (crate split) gerekir.

[profile.release]
opt-level = 2
codegen-units = 16
lto = false
incremental = false
strip = "symbols"
debug = false
panic = "unwind"

[profile.release.package.app]
opt-level = 0
codegen-units = 256
incremental = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
cfb = "0.14.0"
chrono = "0.4.44"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-shell = "2.2"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "bmp", "tiff", "tga", "pnm"] }
kamadak-exif = "0.5"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
ureq = { version = "2", features = ["json"] }
quick-xml = "0.39.2"
pdf-extract = "0.10.0"
opener = "0.7"
url = "2"
winreg = "0.55"
tiny_http = "0.12"
getrandom = "0.2"
tauri-plugin-http = "2"
sha2 = "0.10"
fs2 = "0.4"
encoding_rs = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
hnsw_rs = "0.3"
